# coding-practices

./: .gitmodules  BUILD.bazel  MODULE.bazel  README.md
00-tooling-hello/c/: BUILD.bazel  hello.c  hello.h  main.c
00-tooling-hello/cpp/: BUILD.bazel  hello.cc  hello.h
01-quantum-hide-n-seek/: BUILD.bazel  README.md  game.c  game.h  main.c  microtensor.c  microtensor.h  nk.c  nk_config.h  nuklear_sdl3.h
libmscc/: BUILD.bazel  alloc.c  alloc.h  arena.c  arena.h  error.h  mscc.h  text.h
tools/cc/: defs.bzl
tools/python/: BUILD.bazel  python_toolchain.bzl
