load("@emsdk//emscripten_toolchain:wasm_rules.bzl", "wasm_cc_binary")
load("//tools/cc:defs.bzl", "c23_binary")

filegroup(
    name = "srcs",
    srcs = glob([
        "*.c",
        "*.h",
    ]),
    visibility = ["//visibility:public"],
)

c23_binary(
    name = "game",
    srcs = [":srcs"],
    visibility = ["//visibility:public"],
    deps = [
        "//libmsc:mscc",
        "//thirdparty:nuklear",
        "//thirdparty:sdl3_shared",
    ],
)

c23_binary(
    name = "game.html",
    srcs = [":srcs"],
    features = ["-output_format_js"],
    linkopts = ["--oformat=html"],
    tags = ["manual"],
    deps = [
        "//libmsc:mscc",
        "//thirdparty:nuklear",
        "//thirdparty:sdl3_static",
    ],
)

wasm_cc_binary(
    name = "game-wasm",
    cc_target = ":game.html",
    visibility = ["//visibility:public"],
)
