load("@emsdk//emscripten_toolchain:wasm_rules.bzl", "wasm_cc_binary")
load("//tools/cc:defs.bzl", "c23_binary", "c23_library")

c23_library(
    name = "hello_lib",
    srcs = ["hello.c"],
    hdrs = ["hello.h"],
    visibility = ["//visibility:public"],
)

c23_binary(
    name = "hello_c",
    srcs = ["main.c"],
    visibility = ["//visibility:public"],
    deps = [":hello_lib"],
)

c23_binary(
    name = "hello_c_wasm.html",
    srcs = [
        "hello.c",
        "hello.h",
        "main.c",
    ],
    features = ["-output_format_js"],
    linkopts = ["--oformat=html"],
    tags = ["manual"],
)

wasm_cc_binary(
    name = "hello_c_wasm",
    cc_target = ":hello_c_wasm.html",
    visibility = ["//visibility:public"],
)
